syntax = "proto3";

option go_package = "github.com/cc-0000/indeq/common/api";

package api;

service AuthenticationService {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Verify(VerifyRequest) returns (VerifyResponse);
    rpc SignCSR(SignCSRRequest) returns (SignCSRResponse);
    rpc VerifyOTP(VerifyOTPRequest) returns (VerifyOTPResponse);
    rpc ForgotPassword(ForgotPasswordRequest) returns (ForgotPasswordResponse);
    rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse);
    rpc ResendOTP(ResendOTPRequest) returns (ResendOTPResponse);
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
    string user_id = 2;
    string error = 3;
}

message RegisterRequest {
    string email = 1;
    string password = 2;
    string name = 3;
}

message RegisterResponse {
    bool success = 1;
    string error = 2;
    string token = 3;
}

message VerifyRequest {
    string token = 1;
}

message VerifyResponse {
    bool valid = 1;
    string user_id = 2;
    string error = 3;
}

message SignCSRRequest {
    string csr_base64 = 1;
    LoginRequest loginRequest = 2;
}

message SignCSRResponse {
    string certificate_base64 = 1;
}

message VerifyOTPRequest {
    string code = 1;
    string type = 2;
    string token = 3;
}

message VerifyOTPResponse {
    bool success = 1;
    string error = 2;
    string token = 3;
    string user_id = 4;
}

message ResendOTPRequest {
    string type = 1;
    string token = 2;
}

message ResendOTPResponse {
    bool success = 1;
    string error = 2;
}

message ForgotPasswordRequest {
    string email = 1;
}

message ForgotPasswordResponse {
    bool success = 1;
    string error = 2;
    string token = 3;
}

message ResetPasswordRequest {
    string password = 1;
    string token = 2;
}

message ResetPasswordResponse {
    bool success = 1;
    string error = 2;
}